2018-12-12  Leonardo Sandoval  <leonardo.sandoval.gonzalez@intel.com>

	* benchtests/scripts/compare_bench.py (do_compare): Catch KeyError
	and ZeroDivisorError exceptions.
	* benchtests/scripts/compare_bench.py (compare_runs): Use stats
	argument to loop through user provided statistics.
	* benchtests/scripts/compare_bench.py (main): Include the --stats
	argument.

2018-12-12  Leonardo Sandoval  <leonardo.sandoval.gonzalez@intel.com>

	* benchtests/scripts/compare_bench.py (compare_runs): Continue
	instead of return.

2018-12-12  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/posix/timespec_get.c: Add missing “any later version”
	clause to copyright header.

2018-12-12  Tulio Magno Quites Machado Filho  <tuliom@linux.ibm.com>

	[BZ #23614]
	* sysdeps/powerpc/powerpc64/addmul_1.S (FUNC): Add CFI offset for
	registers saved in the stack frame.
	* sysdeps/powerpc/powerpc64/lshift.S (__mpn_lshift): Likewise.
	* sysdeps/powerpc/powerpc64/mul_1.S (__mpn_mul_1): Likewise.

2018-12-11  Gabriel F. T. Gomes  <gabriel@inconstante.eti.br>

	* include/bits/monetary-ldbl.h: New file.
	* include/bits/printf-ldbl.h: Likewise.
	* include/bits/stdio-ldbl.h: Likewise.
	* include/bits/stdlib-ldbl.h: Likewise.
	* include/bits/syslog-ldbl.h: Likewise.
	* include/bits/wchar-ldbl.h: Likewise.

2018-12-11  Gabriel F. T. Gomes  <gabriel@inconstante.eti.br>

	* libio/libio.h: Remove redirection for _IO_vfprintf.

2018-12-11  Andreas Schwab  <schwab@suse.de>

	* Makerules: Remove all references to abilist-pattern.
	(update-all-abi): Simplify find expression.

2018-12-11  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	[BZ #23961]
	* math/auto-libm-test-in: Add new test case.
	* math/auto-libm-test-out-pow: Regenerated.
	* sysdeps/ieee754/flt-32/e_powf.c (__powf): Fix overflow check.

2018-12-10  DJ Delorie  <dj@redhat.com>

	[BZ #23948]
	* support/test-container.c: Move postclean step to before we
	change namespaces.

2018-12-10  Joseph Myers  <joseph@codesourcery.com>
